--- a/foodai/templates/research.html
+++ b/foodai/templates/research.html
@@ -2,20 +2,20 @@
 <html lang="ja" dir="ltr">
 
 <head>
-  <link rel="stylesheet" href="css/research.css">
+  <link rel="stylesheet" href="/static/css/research.css">
   <link href="dist/hamburgers.css" rel="stylesheet">
     <meta charset="UTF-8">
     <title>RESERCH</title>
 </head>
 
 <body>
-    <img class="research" src="images/research.png"</img>
+    <img class="research" src="/static/images/research.png"</img>
 
     <div id="ham-menu">
     <ul>
-    <li> <a href="home.html" class="menu">HOME</a></li>
-    <li> <a href="how.html" class="menu">HOW TO USE</a></li>
-    <li> <a href="check.html" class="menu">LET'S CHECK!</a></li>
+    <li> <a href="/" class="menu">HOME</a></li>
+    <li> <a href="/how" class="menu">HOW TO USE</a></li>
+    <li> <a href="/check" class="menu">LET'S CHECK!</a></li>
     </ul>
 </div>
 <div id="menu-background"></div>
