--- a/foodai/templates/check.html
+++ b/foodai/templates/check.html
@@ -2,8 +2,8 @@
 <html lang="ja" dir="ltr">
 
 <head>
-  <script src="check.js"> </script>
-  <link rel="stylesheet" href="css/check.css">
+  <script src="/static/check.js"> </script>
+  <link rel="stylesheet" href="/static/css/check.css">
   <link href="dist/hamburgers.css" rel="stylesheet">
     <meta charset="UTF-8">
     <title>Let's check</title>
@@ -13,14 +13,14 @@
 <body>
     <div id="ham-menu">
     <ul>
-    <li> <a href="home.html" class="menu">HOME</a></li>
-    <li> <a href="how.html" class="menu"> HOW TO USE</a> </li>
-    <li> <a href="research.html" class="menu">RESEARCH</a></li>
+    <li> <a href="/" class="menu">HOME</a></li>
+    <li> <a href="/how" class="menu"> HOW TO USE</a> </li>
+    <li> <a href="/research" class="menu">RESEARCH</a></li>
     </ul>
 </div>
 <div id="menu-background"></div>
 
-    <img class="lets" src="images/check.png"</img>
+    <img class="lets" src="/static/images/check.png"</img>
 
     <form method = post enctype = multipart/form-data>
         <p><input type=file name=file class="button" style="position:absolute;left:150px;bottom:300px">
