--- a/foodai/templates/check.html
+++ b/foodai/templates/check.html
@@ -22,9 +22,9 @@
 
     <img class="lets" src="/static/images/check.png"</img>
 
-    <form method = post enctype = multipart/form-data>
-        <p><input type=file name=file class="button" style="position:absolute;left:150px;bottom:300px">
-        <input type=submit value=Upload class="button" style="position:absolute;left:150px;bottom:200px" >
+    <form method = "post" action="/" enctype = "multipart/form-data">
+        <p><input type="file" name="file" class="button" style="position:absolute;left:150px;bottom:300px">
+        <input type="submit" value="Upload" class="button" style="position:absolute;left:150px;bottom:200px" >
     </form>
 </body>
 
