--- a/foodai/templates/result.html
+++ b/foodai/templates/result.html
@@ -10,8 +10,7 @@
 
 <body>
 <img class="result" src="/static/images/result.png"</img>
-<p class="result" style="position:absolute;left:100px;top:350px">この食材は{{classes[predicted]}}</p>
-<p class="result" style="position:absolute;left:100px;top:350px">判定：{{classes[predicted]}}</p>
+<p class="result" style="position:absolute;left:100px;top:350px">この食材は{{message}}</p>
 <div id="ham-menu">
 <ul>
 <li> <a href="/" class="menu">HOME</a></li>
