--- a/foodai/templates/home.html
+++ b/foodai/templates/home.html
@@ -15,7 +15,7 @@
     <div id="home" class="big-bg">
 
     <div class="home-content wrapper">
-    <img class="logo" src="/static/images/logo.png" alt="Meal checker for dog ホーム＞"</img>
+    <img class="logo" src="/static/images/logo.png" alt="Meal checker for dog ホーム"></img>
 
     <p class="family navy " style="position:absolute;left:0px;bottom:200px">大切な家族を守るために。</p>
     <p class="save navy " style="position:absolute;left:0px;bottom:120px">私たちは中毒から</p>
