--- a/foodai/templates/result.html
+++ b/foodai/templates/result.html
@@ -8,8 +8,10 @@
 </head>
 
 <body>
-<img class="result" src="/static/images/result.png"</img>
-<p class="result" style="position:absolute;left:100px;top:350px">この食材は{{message}}</p>
+<img class="result" src="/static/images/result.png"></img>
+<p class="result" style="position:absolute;left:100px;top:150px">この食材は{{label}}です</p>
+<p class="result" style="position:absolute;left:100px;top:310px">{{message}}</p>
+<img class="result" src={{img_url}} style="position:absolute;left:500px;top:560px"></img>
 <div id="ham-menu">
 <ul>
 <li> <a href="/" class="menu">HOME</a></li>
